--- a/event-project/package.json
+++ b/event-project/package.json
@@ -14,6 +14,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.43.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.12.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
   },
