--- a/event-project/package.json
+++ b/event-project/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.43.1",
+    "flowbite": "^2.3.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.12.1",
     "react-dom": "^18.2.0",
